# nvim-dotfiles

./: .gitignore  .readthedocs.yaml  CHANGES.md  LICENSE.md  MANIFEST.in  Makefile  README.md  init.lua  lazy-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-initial.txt  requirements-netlify.txt  requirements.txt  webpack.config.js  wrangler.toml
.github/workflows/: docs-deploy.yml  docs-preview.yml  rtd-pr-preview.yml  test.yml
after/plugin/: colors.lua  crackboard.config  gitsigns.lua  harpoon.lua  init.lua  karm.lua  lsp-backup.lua  lsp_config.lua  mason.lua  neotree.lua  nvim-cmp.lua  nvim-lspconfig.lua  nvim-ts-autotag.lua  telescope.lua  treesitter.lua
docs/: conf.py  glossary.md  index.md  robots.txt
docs/guides/: contribute.md  contributing-policies.md  develop.md  usage.md
docs/reference/: extensions.md  file-system-structure.md  special-theme-elements.md
docs/reference/kitchen-sink/: blocks.rst  index.rst  lists.rst
lua/ujsquared/: init.lua  lazy.lua  packer.lua  remap.lua  set.lua
news/: 1.feature  18.internal  19.internal  21.internal  22.feature  23.internal  25.bugfix  26.bugfix  27.bugfix  28.feature  29.feature  31.feature  32.bugfix  33.feature  34.internal  35.internal  36.feature  37.feature  38.feature  39.feature  40.documentation  43.feature  44.bugfix  45.documentation  46.documentation  46.internal  47.documentation  48.feature  49.documentation  49.feature  54.bugfix  56.bugfix  56.documentation  56.internal  62.internal  garden.internal  garden1.internal  garden2.internal  garden3.internal  garden4.internal  (+1 more)
scripts/: kitchen_sink_update.py  sbt_styles_update.py
src/plone_sphinx_theme/: __init__.py
src/plone_sphinx_theme/assets/scripts/: index.js
src/plone_sphinx_theme/assets/styles/: index.scss
src/plone_sphinx_theme/assets/styles/abstracts/: _mixins.scss
src/plone_sphinx_theme/assets/styles/components/: _icon-links.scss  _title.scss  _versionmodified.scss
src/plone_sphinx_theme/assets/styles/content/: _admonitions.scss  _code.scss  _images.scss  _lists.scss  _margin.scss  _spans.scss
src/plone_sphinx_theme/assets/styles/extensions/: _todo.scss  _video.scss
src/plone_sphinx_theme/assets/styles/sphinx-book-theme/: index.scss
src/plone_sphinx_theme/assets/styles/variables/: _layout.scss  _versionmodified.scss
src/plone_sphinx_theme/theme/plone-sphinx-theme/: theme.conf
src/plone_sphinx_theme/theme/plone-sphinx-theme/static/styles/: plone-sphinx-theme.css
styles/Vocab/Plone/: accept.txt
styles/config/vocabularies/Plone/: accept.txt
