[project]
name = "plone-sphinx-theme"
description = "Plone Sphinx Theme is the official Sphinx theme for Plone 6 Documentation, Plone Conference Training, and documentation of various Plone packages."
keywords = [
  "Plone",
  "Sphinx",
  "Theme",
  "documentation",
  "training",
  "Diátaxis",
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }
maintainers = [
  { name = "Steve Piercy", email = "spiercy@plone.org" },
]
authors = [
  { name = "Steve Piercy", email = "spiercy@plone.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "myst-parser==3.0.1", # Supports Python 3.9-3.12, which is what we need for Plone 6.0. Consider bumping for Plone 6.1.
  "sphinx==7.4.7", # Supports Python 3.9-3.12, which is what we need for Plone 6.0. Consider bumping for Plone 6.1.
  "sphinx-book-theme",
]

[project.optional-dependencies]
#code_style = [
#    "pre-commit"
#]
docs = [
  "graphviz",
  "linkify-it-py",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-examples",
  "sphinxcontrib-mermaid",
  "sphinx-notfound-page",
  "sphinx-reredirects",
  "sphinx-sitemap",
  "sphinxcontrib.httpdomain",
  "sphinxcontrib.httpexample",
  "sphinxcontrib-video",
  "sphinxext-opengraph",

#  Commented from Sphinx Book Theme.
#  Uncomment to install, then configure in conf.py.
#    "ablog",
#    "ipywidgets",
#    "folium",
#    "numpy",
#    "matplotlib",
#    "numpydoc",
#    "myst-nb",
#    "nbclient",
#    "pandas",
#    "plotly",
#    "sphinx-tabs",
#    "sphinx-togglebutton",
#    "sphinx-thebe",
#    "sphinxcontrib-bibtex",
#    "sphinxcontrib-youtube",
]
dev = [
  # Development
  "sphinx-theme-builder[cli]",
  # Test
  "vale",
  # Release
  "zest.releaser[recommended]",
  "zestreleaser.towncrier",
]

[project.entry-points]
"sphinx.html_themes" = { plone_sphinx_theme = "plone_sphinx_theme" }

[project.urls]
Repository = "https://github.com/plone/plone-sphinx-theme"
Documentation = "https://plone-sphinx-theme.readthedocs.io/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.sphinx-theme-builder]
node-version = "16.13.2"
theme-name = "plone-sphinx-theme"

#[tool.pytest.ini_options]
#testpaths = [
#    "tests"
#]
#filterwarnings = [
#]

[tool.zest-releaser]
python-file-with-version = "src/plone_sphinx_theme/__init__.py"

[tool.towncrier]
directory = "news/"
filename = "CHANGES.md"
issue_format = "[Issue #{issue}](https://github.com/plone/plone-sphinx-theme/issues/{issue})"
start_string = "<!-- towncrier release notes start -->\n"
template = "scripts/templates/towncrier_template.jinja"
title_format = "## {version} ({project_date})"
# First underline is used for version/date header.
# Second underline is used for the type names (like 'Bug fixes:').
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "internal"
name = "Internal changes"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[tool.setuptools.dynamic]
version = {attr = "plone_sphinx_theme.__version__"}
